--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,42 @@
 .clearfix::after{
     clear: both;
 }
+.debug{
+    height: 1500px;
+    border: 1px solid black;
+}
+
+.layout{
+   width: 80%;
+   margin: 0 auto;
+}
+
+header{
+    width: 100%;
+    height: 45%;
+    background-color: aqua;
+}
+
+.logo-nav{
+    width: 100%;
+    height: 15%;
+    background-color: pink;
+}
+
+.header-text{
+    width: 100%;
+    height: calc(85% - 40px);
+    background-color: rgb(219, 197, 3);
+    margin: 20px 0;
+}
+ 
+main{
+    width: 100%;
+    height: 45%;
+    background-color: blueviolet;
+}
+footer{
+    width: 100%;
+    height: 10%;
+    background-color: blue;
+}
