--- a/css/style.css
+++ b/css/style.css
@@ -15,26 +15,59 @@
 
 .layout{
    width: 80%;
-   margin: 0 auto;
+   margin: 20px auto;
+}
+img{
+    width: 100%;
 }
 /* header */
 header{
     width: 100%;
-    height: 45%;
+    height: 40%;
 }
 
 .logo-nav{
     width: 100%;
-    height: 15%;
-    background-color: pink;
+    height: 20%;
+
+}
+.logo{
+    width:20%;
+    height: 60%;
+    border-right: 1px solid grey;
+    padding-right: 10px;
 }
 
-.header-text{
+li{
+    float: left;
+    list-style-type: none;
+    margin-right: 20px;
+    margin-top: 40px;
+}
+
+.header-box{
+    background-image: url(../img/banner.jpg);
+    background-size: 100%;
+    background-position: -20px;
     width: 100%;
-    height: calc(85% - 40px);
-    background-color: rgb(219, 197, 3);
-    margin: 20px 0;
+    height: calc(80% - 60px);
+    margin: 30px 0;
+    border-radius: 1%;
+    position: relative;
 } 
+.header-text{
+   
+    width:50% ;
+    position: absolute;
+    bottom: 10%;
+    left: 5%;
+
+}
+.header-title{
+    font-size: 30px;
+}
+
+
  /* main */
 main{
     width: 100%;
