--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0%;
     box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 .clearfix::after{
@@ -9,13 +10,12 @@
     clear: both;
     display: table;
 }
-.debug{
-    height: 1500px;
-}
+
 
 .layout{
    width: 80%;
    margin: 20px auto;
+   height: 1500px;
 }
 img{
     width: 100%;
@@ -33,7 +33,7 @@ header{
 
 }
 .logo{
-    width:20%;
+    width:15%;
     height: 60%;
     border-right: 1px solid grey;
     padding-right: 10px;
@@ -62,6 +62,7 @@ li{
     position: absolute;
     bottom: 10%;
     left: 5%;
+    color: white;
 
 }
 .header-title{
@@ -73,15 +74,19 @@ li{
 main{
     width: 100%;
     height: 45%;
+    color: grey;
 }
 
 .main-title{
     width: 100%;
     margin-top: 20px;
 }
+.main-title h1{
+    color: black;
+}
 
 .box{
-    width: 20%;
+    width: 25%;
     height:calc(85% - 40px);
     margin: 20px 0;
     padding: 15px;
@@ -106,6 +111,11 @@ main{
     margin: 20px auto;
 }
 
+.box-text h5{
+    color: black;
+    margin: 10px 0;
+}
+
 
 .side-left{
     background-image: url(../img/img-1.jpg); 
@@ -128,11 +138,10 @@ main{
 }
 
 .main-text{
-    width: calc(100% - 40% - 40px);
+    width: calc(100% - 50% - 40px);
     float: left; 
     padding: 15px;
     height: calc(85% - 40px);
-
     margin: 20px;
 
 }
